fixscrollBarBug1.4

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -47,7 +47,7 @@
   margin-top: 100px;
   background-color: #778da9;
   padding: 20px;
-
+  overflow: auto;
   @media (max-width: 768px) {
     margin-top: 0px;
   }
